<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.fond.lost.losty.view.JoinActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/notosanshebrewregular"
        android:gravity="center"
        android:text="@string/facebook_login"
        android:textColor="@color/title_color"
        android:textSize="20.5sp"/>

    <ImageView
        android:contentDescription="@string/facebook_login"
        android:id="@+id/facebook_login"
        android:layout_width="282dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/facebook_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/notosanshebrewregular"
        android:gravity="center"
        android:text="@string/phone_login"
        android:textColor="@color/title_color"
        android:textSize="20.5sp"
        />

    <EditText
        android:inputType="phone"
        android:id="@+id/phone_number"
        android:layout_width="282dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_design"
        android:paddingTop="5dp"
        android:textSize="25dp"
        android:drawableStart="@drawable/zip_code"
        />

    <TextView
        android:id="@+id/phone_login"
        android:layout_width="282dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginTop="26.5dp"
        android:background="@drawable/circular_textview"
        android:fontFamily="@font/notosanshebrewregular"
        android:gravity="center"
        android:text="@string/enter"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        />
</LinearLayout>