<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/locationbutton"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="23.5dp"
        android:layout_marginRight="23.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_my_location"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="22.5sp"
        android:text="@string/enter_address"
        android:layout_marginLeft="23.5dp"
        android:layout_marginRight="23.5dp"
        android:fontFamily="@font/notosanshebrewregular"
        android:textColor="@color/title_color"
        />

    <TextView
        android:id="@+id/location_text"
        android:hint="@string/enter_address_hint"
        android:layout_marginLeft="23.5dp"
        android:layout_marginRight="23.5dp"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/colorPrimary"
        ></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/search_radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textSize="18sp"
            android:text="@string/search_radios"
            android:layout_marginLeft="23.5dp"
            android:layout_marginRight="23.5dp"
            android:paddingBottom="14dp"
            android:fontFamily="@font/notosanshebrewregular"
            android:textColor="@color/title_color"
            />

        <fragment
            android:id="@+id/map"
            android:layout_below="@id/search_radios"
            android:layout_above="@+id/ad"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:apiKey="AIzaSyBOhSyDfA1rHUMrGJ_G_k32vRZVadvCDSk"
             />



        <ImageView
            android:layout_marginBottom="10dp"
            android:id="@+id/recenter"
            android:layout_alignLeft="@+id/map"
            android:layout_above="@+id/addPin"
            android:layout_marginLeft="7dp"
            android:scaleType="fitXY"
            android:src="@drawable/recenter"
            android:layout_width="22dp"
            android:layout_height="22dp" />

        <ImageView
            android:layout_marginLeft="7dp"
            android:id="@+id/addPin"
            android:layout_alignLeft="@+id/map"
            android:layout_above="@+id/ad"
            android:layout_marginBottom="25dp"
            android:scaleType="fitXY"
            android:src="@drawable/add_pin"
            android:layout_width="22dp"
            android:layout_height="32dp" />

        <FrameLayout
            android:id="@+id/ad"
            android:layout_alignParentBottom="true"
            android:background="#ec008c"
            android:layout_width="match_parent"
            android:layout_height="49dp"></FrameLayout>

    </RelativeLayout>

</LinearLayout>